--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
  <html>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
  <head>
-	 <title>Untitled</title>
+	 <title>Php Site</title>
 	 <meta charset="UTF-8"/>
 	 <link rel="stylesheet" href="" type="text/css"/>
  </head>
