--- a/index.html
+++ b/index.html
@@ -7,9 +7,31 @@
 	 <link rel="stylesheet" href="" type="text/css"/>
  </head>
 	 <body>
+	 
+	 <style>
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+   body{
+       font-family: 'Poppins', sans-serif;
+   }
+   
+	 .MsoNormal{
+	     font-size: 20pt;
+	     padding: 5px;
+	     background: #DDDDDD;
+	 }
+	 
+	 #items_id{
+	     color: red;
+	     font-weight: 500;
+	     text-decoration: underline red;
+	 }
+	 
+	 </style>
+	 
 	<!--StartFragment-->
 
-<p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="1337040638"><a href="https://chatter1089.000webhostapp.com/Jit/index.php">Jit</a></w:sdt><o:p></o:p></span></p>
+<a href="https://chatter1089.000webhostapp.com/Jit/index.php"><p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="items_id">Jit</w:sdt><o:p></o:p></span></p></a>
 
 <w:sdt prefixmappings="xmlns:ns0='http://schemas.microsoft.com/office/2006/coverPageProps' " xpath="/ns0:CoverPageProperties[1]/ns0:CompanyPhone[1]" showingplchdr="t" docpart="53C376B65957944CB24E43DFEDD22329" text="t" storeitemid="X_55AF091B-3C7A-41E3-B477-F2FDAA23CFDA" title="Enter telephone:" sdttag="Enter telephone:" id="-451862938">
  <div style="mso-element:para-border-div;border:none;border-bottom:dashed #231F20 1.0pt;
@@ -18,7 +40,7 @@
  </div>
 </w:sdt>
 
-<p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="1337040638"><a href="https://chatter1089.000webhostapp.com/Sumana/index.php">Sumana</a></w:sdt><o:p></o:p></span></p>
+<a href="https://chatter1089.000webhostapp.com/Sumana/index.php"><p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="items_id">Sumana</w:sdt><o:p></o:p></span></p></a>
 
 <w:sdt prefixmappings="xmlns:ns0='http://schemas.microsoft.com/office/2006/coverPageProps' " xpath="/ns0:CoverPageProperties[1]/ns0:CompanyPhone[1]" showingplchdr="t" docpart="53C376B65957944CB24E43DFEDD22329" text="t" storeitemid="X_55AF091B-3C7A-41E3-B477-F2FDAA23CFDA" title="Enter telephone:" sdttag="Enter telephone:" id="-451862938">
  <div style="mso-element:para-border-div;border:none;border-bottom:dashed #231F20 1.0pt;
@@ -27,7 +49,7 @@
  </div>
 </w:sdt>
 
-<p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="1337040638"><a href="https://chatter1089.000webhostapp.com/Try/index.php">Try</a></w:sdt><o:p></o:p></span></p>
+<a href="https://chatter1089.000webhostapp.com/Try/index.php"><p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="items_id">Try</w:sdt><o:p></o:p></span></p></a>
 
 <w:sdt prefixmappings="xmlns:ns0='http://schemas.microsoft.com/office/2006/coverPageProps' " xpath="/ns0:CoverPageProperties[1]/ns0:CompanyPhone[1]" showingplchdr="t" docpart="53C376B65957944CB24E43DFEDD22329" text="t" storeitemid="X_55AF091B-3C7A-41E3-B477-F2FDAA23CFDA" title="Enter telephone:" sdttag="Enter telephone:" id="-451862938">
  <div style="mso-element:para-border-div;border:none;border-bottom:dashed #231F20 1.0pt;
@@ -36,7 +58,7 @@
  </div>
 </w:sdt>
 
-<p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="1337040638"><a href="https://chatter1089.000webhostapp.com/WhoAmI/index.php">WhoAmI</a></w:sdt><o:p></o:p></span></p>
+<a href="https://chatter1089.000webhostapp.com/WhoAmI/index.php"><p class="MsoNormal"><span lang="EN-US"><w:sdt prefixmappings="xmlns:ns0='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://schemas.openxmlformats.org/package/2006/metadata/core-properties' " xpath="/ns1:coreProperties[1]/ns0:subject[1]" showingplchdr="t" docpart="CF3F13432E36D84A94846071A32D22DB" text="t" storeitemid="X_6C3C8BC8-F283-45AE-878A-BAB7291924A1" title="Enter item:" sdttag="Enter item:" id="items_id">WhoAmI</w:sdt><o:p></o:p></span></p></a>
 
 <w:sdt prefixmappings="xmlns:ns0='http://schemas.microsoft.com/office/2006/coverPageProps' " xpath="/ns0:CoverPageProperties[1]/ns0:CompanyPhone[1]" showingplchdr="t" docpart="53C376B65957944CB24E43DFEDD22329" text="t" storeitemid="X_55AF091B-3C7A-41E3-B477-F2FDAA23CFDA" title="Enter telephone:" sdttag="Enter telephone:" id="-451862938">
  <div style="mso-element:para-border-div;border:none;border-bottom:dashed #231F20 1.0pt;
